changed width from 100vw to 100% to avoid horizontal scroll in about.html

--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ p#listen-p{
 /* About */
 
 div#mother-2-3 {
-    width: 100vw;
+    width: 100%;
     height: auto;
     display: flex;
     flex-wrap: wrap;
